kubernetes/apps/database/pgadmin/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "pgAdmin"
    gethomepage.dev/description: "PostgreSQL administration"
    gethomepage.dev/group: "Database"
    gethomepage.dev/icon: "mdi-database-cog"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "pgadmin.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: pgadmin
          port: 5050
